<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C9E1FF"
    android:theme="@style/Base.AlertDialog.AppCompat.Light"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="101dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtResultado"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:hint="@string/resultado"
            android:padding="8dp"
            android:textSize="18sp"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="16dp" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btFat"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:onClick="fatorial"
                android:text="@string/fatorial"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="88dp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="128dp" />

            <Button
                android:id="@+id/btRaiz"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:onClick="raiz"
                android:text="@string/raiz"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="88dp"
                tools:layout_editor_absoluteX="104dp"
                tools:layout_editor_absoluteY="128dp" />

            <Button
                android:id="@+id/btLimpar"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:onClick="limpar"
                android:text="@string/limpar"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="88dp"
                tools:layout_editor_absoluteX="192dp"
                tools:layout_editor_absoluteY="128dp" />

            <Button
                android:id="@+id/btLimparTudo"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:onClick="limparTudo"
                android:text="@string/limparTudo"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="88dp"
                tools:layout_editor_absoluteX="192dp"
                tools:layout_editor_absoluteY="128dp" />
        </TableRow>

        <TableRow
            android:id="@+id/rwUm"
            android:layout_width="364dp"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btUm"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:onClick="setNumber"
                android:text="@string/Um"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="88dp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="128dp" />

            <Button
                android:id="@+id/btDois"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:onClick="setNumber"
                android:text="@string/Dois"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="88dp"
                tools:layout_editor_absoluteX="104dp"
                tools:layout_editor_absoluteY="128dp" />

            <Button
                android:id="@+id/btTres"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:onClick="setNumber"
                android:text="@string/Tres"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="88dp"
                tools:layout_editor_absoluteX="192dp"
                tools:layout_editor_absoluteY="128dp" />

            <Button
                android:id="@+id/btMais"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:onClick="setNumber"
                android:text="@string/mais"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="88dp"
                tools:layout_editor_absoluteX="192dp"
                tools:layout_editor_absoluteY="128dp" />

        </TableRow>

        <TableRow
            android:id="@+id/rwDois"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:addStatesFromChildren="false">

            <Button
                android:id="@+id/btQuatro"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:onClick="setNumber"
                android:text="@string/Quatro" />

            <Button
                android:id="@+id/btCinco"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:onClick="setNumber"
                android:text="@string/Cinco" />

            <Button
                android:id="@+id/btSeis"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:onClick="setNumber"
                android:text="@string/Seis" />

            <Button
                android:id="@+id/btMenos"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:onClick="setNumber"
                android:text="@string/menos"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="88dp"
                tools:layout_editor_absoluteX="192dp"
                tools:layout_editor_absoluteY="128dp" />

        </TableRow>

        <TableRow
            android:id="@+id/rwTres"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btSete"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:onClick="setNumber"
                android:text="@string/Sete" />

            <Button
                android:id="@+id/btOito"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:onClick="setNumber"
                android:text="@string/Oito" />

            <Button
                android:id="@+id/btNove"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:onClick="setNumber"
                android:text="@string/Nove" />

            <Button
                android:id="@+id/btMulti"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:onClick="setNumber"
                android:text="@string/multi"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="88dp"
                tools:layout_editor_absoluteX="192dp"
                tools:layout_editor_absoluteY="128dp" />

        </TableRow>

        <TableRow
            android:id="@+id/rwQuatro"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btZero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:onClick="setNumber"
                android:text="@string/Zero" />

            <Button
                android:id="@+id/btDiv"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:onClick="setNumber"
                android:text="@string/div" />

            <Button
                android:id="@+id/btPow"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:onClick="setNumber"
                android:text="@string/elevado" />

            <Button
                android:id="@+id/btIgual"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:onClick="calcular"
                android:text="@string/igual"
                tools:layout_conversion_absoluteHeight="48dp"
                tools:layout_conversion_absoluteWidth="88dp"
                tools:layout_editor_absoluteX="192dp"
                tools:layout_editor_absoluteY="128dp" />

        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>